# wht_slave

./: .clang-format  .clang-tidy  .mxproject  CMakeLists.txt  CMakePresets.json  STM32F429XX_FLASH.ld  TODO.md  config.h  wht_slave.ioc
.github/workflows/: release.yml
Core/Inc/: FreeRTOSConfig.h  factory_test.h  main.h  stm32f4xx_it.h  uart_cmd_handler.h  usart.h
Core/Src/: dma.c  factory_test.c  freertos.c  gpio.c  main.c  spi.c  stm32f4xx_it.c  uart_cmd_handler.c  usart.c
Docs/: debug_logs_for_pin_configuration.md  factory_test_usage.md  fragment_sending_fix.md  slave2backend_protocol.md  slave2master_protocol.md  slot_skipping_issue_fix.md  testCount_configuration_analysis.md  total_cycles_config_fix.md  uwb_optimization_quick_reference.md  uwb_transmission_optimization.md  version_management.md
FreeRTOScpp/: CMakeLists.txt
FreeRTOScpp/include/: FreeRTOScpp.h  TaskCPP.h
Scripts/: migrate_to_git_tags.ps1  migrate_to_git_tags.sh
User/: CMakeLists.txt
User/App/: CMakeLists.txt  Master2SlaveMessageHandlers.cpp  SlaveDevice.cpp  SlaveDevice.h  slave_app.c  slave_app.cpp
User/CX310/: CX310.hpp  uwb_interface.cpp  uwb_interface.hpp
User/ContinuityCollector/: CMakeLists.txt  ContinuityCollector.cpp  ContinuityCollector.h
User/SlotManager/: CMakeLists.txt  SlotManager.cpp  SlotManager.h
User/Task/: uwb_task.c  uwb_task.cpp
User/accessory/: LockController.cpp  LockController.h  button.cpp  button.h
User/app/: master_slave_message_handlers.cpp  master_slave_message_handlers.h  slave_app.cpp  slave_device.cpp  slave_device.h  slave_device_state.h
User/continuity_collector/: CMakeLists.txt  continuity_collector.cpp  continuity_collector.h
User/freertos_new/: CMakeLists.txt  README.md  freertos_new.cpp  freertos_new.h
User/hptimer/: hptimer.cpp  hptimer.hpp
User/ota/: CMakeLists.txt  ota_task.cpp  ota_task.h
User/slot_manager/: CMakeLists.txt  slot_manager.cpp  slot_manager.h
User/task/: CMakeLists.txt  MasterComm.cpp  MasterComm.h  uwb_ltlp_queue.c  uwb_ltlp_queue.h  uwb_task.cpp
User/uid/: hal_uid.hpp
bootloader/: CMakeLists.txt  GD32F4xx_Bootloader.hex  bootloader_flag.h  uart_cmd_handler.c
cmake/: copy_versioned_firmware.cmake  flash_by_install.cmake  gcc-arm-none-eabi.cmake  get_build_version.cmake  get_version.cmake  update_version.cmake  version.h.in
cmake/stm32cubemx/: CMakeLists.txt
easylogger/: CMakeLists.txt
easylogger/inc/: elog_cfg.h
easylogger/port/: elog_port.c
factory_test/: CMakeLists.txt  Factory Test Protocol.md  factory_test.c  factory_test.h  factory_test_tool.py
factory_test_protocol/: factory_test_protocol.md  factory_test_tool.py
ota/: CMakeLists.txt  get_id.c  get_id.h  msg_def.h  ota.c  ota.h
ota/ltlp/: ltlp_api.c  ltlp_api.h  ltlp_common.c  ltlp_common.h  ltlp_def.h  ltlp_kernel.c  ltlp_kernel.h  ltlp_receiver.c  ltlp_receiver.h  ltlp_sender.c  ltlp_sender.h
protocol/: Common.h  ProtocolProcessor.cpp  ProtocolProcessor.h  WhtsProtocol.h
protocol/messages/: Backend2Master.cpp  (+8 more)
