add_subdirectory(freertos_new)
add_subdirectory(app)
add_subdirectory(task)
add_subdirectory(hptimer)
add_subdirectory(continuity_collector)
add_subdirectory(slot_manager)
add_subdirectory(uid)
add_subdirectory(accessory)

if(UWB_CHIP_TYPE STREQUAL "DW1000")
  add_subdirectory(Dw1000)
elseif(UWB_CHIP_TYPE STREQUAL "CX310")
  add_subdirectory(CX310)
endif()
